Update layout and signin page

--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,5 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
+// Supports weights 100-900
+import '@fontsource-variable/truculenta';
 
 const { cookies, redirect } = Astro;
 
@@ -11,14 +13,55 @@ if (accessToken && refreshToken) {
 }
 ---
 
-<Layout title="Sign in">
-  <h1>Sign in</h1>
-  <p>New here? <a href="/register">Create an account</a></p>
-  <form action="/api/auth/signin" method="post" enctype="multipart/form-data">
-    <label for="email" for="email">Email</label>
-    <input type="email" name="email" id="email" />
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" />
-    <button type="submit">Login</button>
-  </form>
+<Layout title="Iniciar Sesión">
+  <div class="h-screen w-full">
+    <div class="h-full w-full flex items-center justify-center">
+      <div class="h-full w-full">
+        <form
+          action="/api/auth/signin"
+          method="post"
+          enctype="multipart/form-data"
+          class="flex flex-col hover:blur-0 h-full bg-center bg-cover items-center justify-center w-full gap-5 bg-gradient-to-tr from-sky-700 to-sky-500"
+        >
+            <img
+                src="https://ggbralugqoodmaklkses.supabase.co/storage/v1/object/sign/public%20images/logo2.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJwdWJsaWMgaW1hZ2VzL2xvZ28yLnBuZyIsImlhdCI6MTcxMTM4ODA5NSwiZXhwIjoyMzQyNTQwMDk1fQ.AvFkZiIil2DyiaHVZ7lV2Y70-vPqS3E7ArgxoNxkVXY&t=2024-03-25T17%3A34%3A56.892Z"
+                alt="Parceritos Baby"
+                class="w-72 h-44 -mb-12"
+            />
+          <h1 class="my-6 text-6xl text-white text-better">
+            Parceritos Baby
+          </h1>
+          
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="bg-white/50 hover:bg-white md:bg-white placeholder:text-sky-500 placeholder:text-sm text-sky-500 py-3 px-5 focus:text-sky-500 focus:outline focus:outline-offset-1 focus:outline-sky-500 rounded-md"
+            placeholder="¡Ingresa tu Correo!"
+          />
+          <input
+            type="password"
+            name="password"
+            id="password"
+            class="bg-white/50 hover:bg-white md:bg-white placeholder:text-sky-500 placeholder:text-sm text-sky-500 py-3 px-5 focus:text-sky-500 focus:outline focus:outline-offset-1 focus:outline-sky-500 rounded-md"
+            placeholder="¡Ingresa tu Contraseña!"
+          />
+          
+          <button
+            type="submit"
+            class="px-6 py-2 bg-lime-500 rounded hover:bg-white hover:text-lime-700 font-semibold transition-all text-white hover:scale-110"
+          >
+            Iniciar 
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+
 </Layout>
+
+<style>
+    .text-better {
+        font-family: 'Truculenta Variable', sans-serif;
+    }
+</style>
