--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import '@fontsource-variable/truculenta';
+import Signin from "./signin.astro";
 ---
 
 <Layout title="Dasboard Parceritos Baby">
-	<main>
-		<h1><a href="/signin">Ingresar</a></h1>
-	</main>
+  <Signin />
 </Layout>
 
 <style>
-	
+	.text-better{
+		font-family: 'Truculenta Variable', sans-serif;
+	}
 </style>
