Update dependencies and fix error handling in signin page

--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,16 +1,26 @@
 ---
 import Layout from "../layouts/Layout.astro";
 // Supports weights 100-900
-import '@fontsource-variable/truculenta';
+import "@fontsource-variable/truculenta";
+import Swal from "sweetalert2";
 
 const { cookies, redirect } = Astro;
 
 const accessToken = cookies.get("sb-access-token");
 const refreshToken = cookies.get("sb-refresh-token");
-
+const isError = cookies.has("error");
+const phrase = "¡Ups! Algo salió mal. Por favor, intenta de nuevo.";
 if (accessToken && refreshToken) {
   return redirect("/dashboard");
 }
+
+console.log(isError);
+
+if (isError) {
+    
+  cookies.delete("error");
+}
+const { error= isError } = Astro.props;
 ---
 
 <Layout title="Iniciar Sesión">
@@ -23,15 +33,13 @@ if (accessToken && refreshToken) {
           enctype="multipart/form-data"
           class="flex flex-col hover:blur-0 h-full bg-center bg-cover items-center justify-center w-full gap-5 bg-gradient-to-tr from-sky-700 to-sky-500"
         >
-            <img
-                src="https://ggbralugqoodmaklkses.supabase.co/storage/v1/object/sign/public%20images/logo2.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJwdWJsaWMgaW1hZ2VzL2xvZ28yLnBuZyIsImlhdCI6MTcxMTM4ODA5NSwiZXhwIjoyMzQyNTQwMDk1fQ.AvFkZiIil2DyiaHVZ7lV2Y70-vPqS3E7ArgxoNxkVXY&t=2024-03-25T17%3A34%3A56.892Z"
-                alt="Parceritos Baby"
-                class="w-72 h-44 -mb-12"
-            />
-          <h1 class="my-6 text-6xl text-white text-better">
-            Parceritos Baby
-          </h1>
-          
+          <img
+            src="https://ggbralugqoodmaklkses.supabase.co/storage/v1/object/sign/public%20images/logo2.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJwdWJsaWMgaW1hZ2VzL2xvZ28yLnBuZyIsImlhdCI6MTcxMTM4ODA5NSwiZXhwIjoyMzQyNTQwMDk1fQ.AvFkZiIil2DyiaHVZ7lV2Y70-vPqS3E7ArgxoNxkVXY&t=2024-03-25T17%3A34%3A56.892Z"
+            alt="Parceritos Baby"
+            class="w-72 h-44 -mb-12"
+          />
+          <h1 class="my-6 text-6xl text-white text-better">Parceritos Baby</h1>
+
           <input
             type="email"
             name="email"
@@ -46,22 +54,39 @@ if (accessToken && refreshToken) {
             class="bg-white/50 hover:bg-white md:bg-white placeholder:text-sky-500 placeholder:text-sm text-sky-500 py-3 px-5 focus:text-sky-500 focus:outline focus:outline-offset-1 focus:outline-sky-500 rounded-md"
             placeholder="¡Ingresa tu Contraseña!"
           />
-          
+          <div id="alert"  class="hidden flex items-center p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+            <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+              <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+              <span class="font-medium"></span> <span class="block sm:inline">{ phrase }</span>
+            </div>
+          </div>
           <button
             type="submit"
             class="px-6 py-2 bg-lime-500 rounded hover:bg-white hover:text-lime-700 font-semibold transition-all text-white hover:scale-110"
           >
-            Iniciar 
+            Iniciar
           </button>
         </form>
       </div>
     </div>
   </div>
-
 </Layout>
 
-<style>
-    .text-better {
-        font-family: 'Truculenta Variable', sans-serif;
+<script define:vars={{error}} >
+    
+  window.addEventListener("load", ()=>{
+    let element = document.getElementById("alert");
+    if (element !== null && error) {
+        element.classList.remove("hidden");
     }
+  });
+</script>
+
+<style>
+  .text-better {
+    font-family: "Truculenta Variable", sans-serif;
+  }
 </style>
