Update Signin component to use client:load instead of client:only

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Signin from "./signin.astro";
 ---
 
 <Layout title="Dasboard Parceritos Baby">
-  <Signin client:only/>
+  <Signin client:load/>
 </Layout>
 
 <style>
