--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 // Supports weights 100-900
 import "@fontsource-variable/truculenta";
-import Swal from "sweetalert2";
+
 
 const { cookies, redirect } = Astro;
 
@@ -75,7 +75,7 @@ const { error= isError } = Astro.props;
   </div>
 </Layout>
 
-<script define:vars={{error}} >
+<script is:inline >
     
   window.addEventListener("load", ()=>{
     let element = document.getElementById("alert");
